docs-archive/apache-airflow-providers-openlineage/1.13.0/_sources/_api/airflow/providers/openlineage/plugins/listener/index.rst.txt
:py:mod:`airflow.providers.openlineage.plugins.listener`
========================================================

.. py:module:: airflow.providers.openlineage.plugins.listener


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.openlineage.plugins.listener.OpenLineageListener



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.openlineage.plugins.listener.get_openlineage_listener



.. py:class:: OpenLineageListener


   OpenLineage listener sends events on task instance and dag run starts, completes and failures.

   .. py:property:: executor
      :type: concurrent.futures.ProcessPoolExecutor


   .. py:method:: on_task_instance_running(previous_state, task_instance, session)


   .. py:method:: on_task_instance_success(previous_state, task_instance, session)


   .. py:method:: on_starting(component)


   .. py:method:: before_stopping(component)


   .. py:method:: on_dag_run_running(dag_run, msg)


   .. py:method:: on_dag_run_success(dag_run, msg)


   .. py:method:: on_dag_run_failed(dag_run, msg)


   .. py:method:: submit_callable(callable, *args, **kwargs)


   .. py:method:: log_submit_error(fut)



.. py:function:: get_openlineage_listener()

   Get singleton listener manager.


